--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -58,8 +58,7 @@ HIP data have been used since 1999 to make important management decisions for mi
 The package can be installed from the USFWS GitHub repository using:
 
 ```r
-library(devtools)
-install_github("USFWS/migbirdHIP")
+devtools::install_github("USFWS/migbirdHIP", quiet = T, upgrade = F, , build_vignettes = T)
 ```
 
 ### Functions overview
@@ -86,44 +85,38 @@ The `read_hip` function allows data to be read in for all states (e.g. `state = 
 * Creates a dl_key column by grouping data by dl_state and dl_date
 * Creates a record_key column (unique identifier for each row, used later by `shiftFix`)
 
-We will use the default settings to read in all of the states from download 1202.
+We will use the default settings to read in all of the states from download 1301.
 
 
 ```r
 library(migbirdHIP)
 
-DL1202 <- read_hip("C:/HIP/DL1202")
+DL1301 <- read_hip("C:/HIP/DL1301")
 ```
 
 ```
-## # A tibble: 1 x 3
+## # A tibble: 4 x 3
 ##   filepath                     encoding   confidence
 ##   <chr>                        <chr>           <dbl>
-## 1 C:/HIP/DL1202/SC20201202.txt ISO-8859-1       0.28
+## 1 C:/HIP/DL1301/GA20211229.txt ISO-8859-1       0.23
+## 2 C:/HIP/DL1301/MO20211229.txt ISO-8859-1       0.26
+## 3 C:/HIP/DL1301/NE20211217.txt ISO-8859-1       0.32
+## 4 C:/HIP/DL1301/NE20211217.txt ISO-8859-2       0.21
 ## # A tibble: 1 x 3
 ##   dl_state mean_prop     n
 ##      <dbl>     <dbl> <int>
-## 1       NA      0.25   107
-## # A tibble: 1 x 2
-##   dl_state source_file   
-##   <chr>    <chr>         
-## 1 <NA>     wi20201216.txt
-## # A tibble: 1 x 2
-##   dl_date source_file   
-##   <chr>   <chr>         
-## 1 <NA>    wi20201216.txt
-## [1] NA
+## 1       NA     0.286    70
 ```
 
 Did you get a warning or three? Read an explanation of common `read_hip` warnings, [below](#common-read_hip-warnings).
 
 ### renameFiles
 
-The `renameFiles` function was incorporated into this package for special cases. Some states submit .txt  files using the "old" 5-digit file name format, containing 2 letters for the state abbreviation followed by a 3-digit Julian date (representing the date the file was uploaded). To convert these pesky 5-digit filenames to the standard 10-digit format (a requirement to read data properly with [read_hip](#read_hip)), supply the `renameFiles` with the directory containing HIP data. File names will be automatically overwritten with the YYYYMMDD format date corresponding to the submitted Julian date. This function is also handy to use when states submit lowercase abbreviations; `renameFiles` will convert lowercase letters to uppercase.
+The `renameFiles` function was incorporated into this package for special cases. Some states submit .txt  files using a 5-digit file name format, containing 2 letters for the state abbreviation followed by a 3-digit Julian date (representing the date the file was uploaded). To convert these 5-digit filenames to the standard 10-digit format (a requirement to read data properly with [read_hip](#read_hip)), supply the `renameFiles` with the directory containing HIP data. File names will be automatically overwritten with the YYYYMMDD format date corresponding to the submitted Julian date. This function also converts lowercase state abbreviations to uppercase.
 
 
 ```r
-renameFiles(path = "C:/HIP/DL1202")
+renameFiles(path = "C:/HIP/DL1301")
 ```
 
 ### shiftFix
@@ -138,10 +131,10 @@ For HIP processing, this function is used in conjunction with other R code to ac
 ```r
 # Snooping
 snoop <-
-  DL1202 %>%
+  DL1301 %>%
   filter(
     !str_detect(birth_date, "^[0-9]{2}\\/[0-9]{2}\\/[0-9]{4}$")) %>%
-  mutate(n_shift = str_length(str_extract(issue_date, "^[0-9]+(?=\\/)")) - 2) %>%
+  mutate(n_shift = stringr::str_length(str_extract(issue_date, "^[0-9]+(?=\\/)")) - 2) %>%
   relocate(record_key, .before = "title") %>%
   relocate(source_file, .before = "record_key") %>%
   select(record_key, n_shift) %>%
@@ -149,9 +142,10 @@ snoop <-
 ```
 
 ```
-## Error: Problem with `mutate()` column `n_shift`.
-## i `n_shift = str_length(str_extract(issue_date, "^[0-9]+(?=\\/)")) - 2`.
-## x could not find function "str_length"
+## # A tibble: 1 x 2
+##   record_key   n_shift
+##   <chr>          <dbl>
+## 1 record_32904       1
 ```
 
 ```r
@@ -161,7 +155,7 @@ unshifted <-
     1:length(snoop$record_key),
     ~shiftFix(
       # Fix the raw data file
-      DL1202,
+      DL1301,
       # For x record id
       snoop$record_key[.x],
       # Shift from state col to email col
@@ -178,23 +172,11 @@ unshifted <-
         str_detect(birth_date, "^[0-9]{1}\\/"),
         paste0("0", birth_date),
         birth_date))
-```
 
-```
-## Error in map(.x, .f, ...): object 'snoop' not found
-```
-
-```r
-DL1202_unshifted <-
-  DL1202 %>%
+DL1301_unshifted <-
+  DL1301 %>%
   filter(!record_key %in% unshifted$record_key) %>%
   bind_rows(unshifted)
-```
-
-```
-## Error: Problem with `filter()` input `..1`.
-## i Input `..1` is `!record_key %in% unshifted$record_key`.
-## x object 'unshifted' not found
 ```
 
 ### clean
@@ -203,11 +185,7 @@ After data are read and unshifted, we `clean`:
 
 
 ```r
-DL1202_clean <- clean(DL1202_unshifted)
-```
-
-```
-## Error in filter(., !is.na(firstname)): object 'DL1202_unshifted' not found
+DL1301_clean <- clean(DL1301_unshifted)
 ```
 
 This function does simple data cleaning. Importantly, records are discarded if first name, last name, birth date, address, state of residence, OR city AND zip are missing.
@@ -233,37 +211,33 @@ The `findDuplicates` function finds hunters that have more than one registration
 
 
 ```r
-findDuplicates(DL1202_clean)
+findDuplicates(DL1301_clean)
 ```
 
 <img src="figure/findDuplicates-1.png" title="Figure 1. Plot of types of duplicates." alt="Figure 1. Plot of types of duplicates." width="500" style="display: block; margin: auto;" />
 
 
 ```r
-findDuplicates(DL1202_clean, return = "table")
+findDuplicates(DL1301_clean, return = "table")
 ```
 
 ```
-## # A tibble: 17 x 2
-##    dupl                      count
-##    <chr>                     <int>
-##  1 address                       1
-##  2 address-city-email            1
-##  3 address-issue_date            1
-##  4 address-issue_date-email      1
-##  5 bag                          91
-##  6 email                         3
-##  7 hunt_mig_birds                5
-##  8 issue_date                   13
-##  9 issue_date-email              1
-## 10 issue_date-hunt_mig_birds     3
-## 11 middle-address                2
-## 12 middle-address-email          2
-## 13 middle-issue_date             1
-## 14 middle-issue_date-email       1
-## 15 middle-suffix                 1
-## 16 suffix-issue_date             1
-## 17 zip                           1
+## # A tibble: 13 x 2
+##    dupl                                         count
+##    <chr>                                        <int>
+##  1 address                                          2
+##  2 address-city                                     1
+##  3 address-email                                    2
+##  4 address-zip-email                                1
+##  5 address-zip-issue_date                           1
+##  6 bag                                            480
+##  7 email                                            2
+##  8 issue_date                                      25
+##  9 issue_date-dl_date                               1
+## 10 issue_date-hunt_mig_birds-dl_date                3
+## 11 middle                                           5
+## 12 middle-address-city-zip-hunt_mig_birds-email     1
+## 13 suffix-issue_date-email                          1
 ```
 
 ### fixDuplicates
@@ -284,7 +258,7 @@ Note: This function replaces "." values with NA in non-permit species columns fo
 
 
 ```r
-DL1202_fixed <- fixDuplicates(DL1202_clean)
+DL1301_fixed <- fixDuplicates(DL1301_clean)
 ```
 
 ### strataCheck
@@ -295,24 +269,24 @@ If a value for a species group is given in the HIP data that doesn't match anyth
 
 
 ```r
-strataCheck(DL1202_fixed)
+strataCheck(DL1301_fixed)
 ```
 
 ```
-## # A tibble: 182 x 4
-##    dl_state spp                state_strata normal_strata   
-##    <chr>    <chr>              <chr>        <chr>           
-##  1 OR       dove_bag           0            1, 2, 3, 5      
-##  2 OR       ducks_bag          0            1, 2, 3, 4      
-##  3 OR       geese_bag          0            1, 2, 3, 4      
-##  4 OR       band_tailed_pigeon 0            1, 2            
-##  5 OR       brant              0            1, 2            
-##  6 OR       coots_snipe        0            1, 2            
-##  7 OR       seaducks           0            1, 2            
-##  8 OH       woodcock_bag       7            0, 1, 2, 3, 4, 5
-##  9 IA       coots_snipe        3            0, 1, 2         
-## 10 AK       band_tailed_pigeon 0            <NA>            
-## # ... with 172 more rows
+## # A tibble: 121 x 4
+##    dl_state spp                state_strata normal_strata
+##    <chr>    <chr>              <chr>        <chr>        
+##  1 OR       dove_bag           0            1, 2, 3, 5   
+##  2 OR       ducks_bag          0            1, 2, 3, 4   
+##  3 OR       geese_bag          0            1, 2, 3, 4   
+##  4 OR       band_tailed_pigeon 0            1, 2         
+##  5 OR       brant              0            1, 2         
+##  6 OR       coots_snipe        0            1, 2         
+##  7 OR       seaducks           0            1, 2         
+##  8 AK       band_tailed_pigeon 0            <NA>         
+##  9 AK       dove_bag           0            <NA>         
+## 10 AK       rails_gallinules   0            <NA>         
+## # ... with 111 more rows
 ```
 
 ### validate
@@ -323,24 +297,24 @@ The `validate` function looks for repeated values in two dimensions, both horizo
 
 
 ```r
-validate(DL1202_fixed, type = "horizontal")
+validate(DL1301_fixed, type = "horizontal")
 ```
 
 ```
-## # A tibble: 71 x 5
+## # A tibble: 43 x 5
 ##    source_file    h_value h_rep h_total prop_repeat
 ##    <chr>          <chr>   <int>   <int>       <dbl>
-##  1 SC20201118.txt 1        3247    3798       0.855
-##  2 wi20201216.txt 1         465     546       0.852
-##  3 AL20201216.txt 1        5774    7049       0.819
-##  4 MI20201216.txt 1         340     416       0.817
-##  5 SC20201202.txt 1        6308    7831       0.806
-##  6 MS20201215.txt 1        6706    8924       0.751
-##  7 MO20201216.txt 1        2954    4047       0.730
-##  8 NC20201202.txt 1        9072   12981       0.699
-##  9 CT20201202.txt 1         120     172       0.698
-## 10 NV20201207.txt 1         280     420       0.667
-## # ... with 61 more rows
+##  1 WI20211229.txt 1         276     323       0.854
+##  2 AL20211229.txt 1        3995    4790       0.834
+##  3 MO20211229.txt 1        2680    3604       0.744
+##  4 WV20211229.txt 2         183     294       0.622
+##  5 IN20211229.txt 1         406     690       0.588
+##  6 MN20211229.txt 1         171     297       0.576
+##  7 WA20211229.txt 1         816    1460       0.559
+##  8 WA20211215.txt 1         937    1737       0.539
+##  9 KY20211228.txt 1         528     984       0.537
+## 10 NE20211217.txt 1         477     903       0.528
+## # ... with 33 more rows
 ```
 
 <b>Vertically.</b> The vertical check searches within each column for repetition. Any species group column with the same value in all rows will be detected. *Coming soon:* States that do not have a hunting season for one or more species groups (e.g. seaducks) will not be returned using this function for reporting all zero values. The default version of this function (`all = FALSE`) only checks duck bags. If the parameter is set to `all = TRUE`, every species group will be checked.
@@ -349,7 +323,7 @@ The two time period options to assess vertical repetition are `period = "dl_date
 
 
 ```r
-validate(DL1202_fixed, type = "vertical")
+validate(DL1301_fixed, type = "vertical")
 ```
 
 ```
@@ -360,7 +334,7 @@ validate(DL1202_fixed, type = "vertical")
 
 
 ```r
-validate(DL1202_fixed, type = "vertical", period = "dl_cycle")
+validate(DL1301_fixed, type = "vertical", period = "dl_cycle")
 ```
 
 ```
@@ -378,7 +352,7 @@ Did the vertical output from the `validate` function return repeated values? Are
 
 ```r
 investigate(
-  DL1202_fixed,
+  DL1301_fixed,
   loc = "AK",
   period_type = "dl_date",
   period = "20201215",
@@ -386,10 +360,7 @@ investigate(
 ```
 
 ```
-## # A tibble: 1 x 2
-##   dove_bag source_file   
-##   <chr>    <chr>         
-## 1 0        AK20201215.txt
+## Are you sure you entered all of the parameters correctly?
 ```
 
 ## Part B: Data Proofing and Correction
@@ -400,7 +371,7 @@ After data are cleaned and checked for any important issues that would require m
 
 
 ```r
-DL1202_proofed <- proof(DL1202_fixed, year = 2020)
+DL1301_proofed <- proof(DL1301_fixed, year = 2021)
 ```
 
 Data that are considered irregular are flagged in a new column called "errors". No actual corrections take place in this step; all data remain identical except for the new "errors" column. For each field, values are compared to standard expected formats and if they do not conform, the field name is pasted as a string in the "errors" column. Each row can have from zero errors (NA) to all column names listed. Multiple flags are hyphen delimited.
@@ -413,7 +384,7 @@ After the download data are proofed, the next step is to fix the data to the bes
 
 
 ```r
-DL1202_corrected <- correct(DL1202_proofed, year = 2020, data = "bag")
+DL1301_corrected <- correct(DL1301_proofed, year = 2021, data = "bag")
 ```
 
 ```
@@ -421,20 +392,20 @@ DL1202_corrected <- correct(DL1202_proofed, year = 2020, data = "bag")
 ```
 
 ```
-## # A tibble: 517 x 4
-##    record_key  zip   state zipState
-##    <chr>       <chr> <chr> <chr>   
-##  1 record_186  32525 AL    FL      
-##  2 record_224  34044 AL    AA      
-##  3 record_1829 15425 AL    PA      
-##  4 record_3297 63804 AL    MO      
-##  5 record_5219 36564 MS    AL      
-##  6 record_6311 79556 FL    TX      
-##  7 record_6984 65466 AL    MO      
-##  8 record_4    44023 AR    OH      
-##  9 record_44   38655 TN    MS      
-## 10 record_57   76182 AR    TX      
-## # ... with 507 more rows
+## # A tibble: 129 x 4
+##    record_key  zip        state zipState
+##    <chr>       <chr>      <chr> <chr>   
+##  1 record_892  71646      AZ    AR      
+##  2 record_1214 53473      AL    WI      
+##  3 record_1334 30152-4158 AL    GA      
+##  4 record_1706 25652      AL    WV      
+##  5 record_2217 35959      GA    AL      
+##  6 record_3432 32567      AL    FL      
+##  7 record_3448 30456      AL    GA      
+##  8 record_3825 36005      FL    AL      
+##  9 record_4202 20097      NC    DC      
+## 10 record_4706 29744      NC    SC      
+## # ... with 119 more rows
 ```
 
 The following changes are made by the `correct` function:
@@ -492,7 +463,7 @@ The following changes are made by the `correct` function:
         * If the email is invalid (i.e. none<!-- breaklink -->@none, noemail, n/a)
     * Any email that wasn't corrected and doesn't fit the standardized email regex remains flagged
 
-All functions in [Part C](#part-c-data-visualization-and-tabulation) will run on the corrected tibble, `DL1202_corrected`, just as they worked on the example tibble `DL1202_proofed`. Errors can be compared between the proofed stage and corrected stage to get a better idea of which errors were serious (i.e. difficult to correct automatically) and determine how serious errors can be prevented in the future.
+All functions in [Part C](#part-c-data-visualization-and-tabulation) will run on the corrected tibble, `DL1301_corrected`, just as they worked on the example tibble `DL1301_proofed`. Errors can be compared between the proofed stage and corrected stage to get a better idea of which errors were serious (i.e. difficult to correct automatically) and determine how serious errors can be prevented in the future.
 
 ### pullErrors
 
@@ -500,7 +471,7 @@ The `pullErrors` function can be used to view all of the actual values that were
 
 
 ```r
-pullErrors(DL1202_proofed, error = "dove_bag")
+pullErrors(DL1301_proofed, error = "dove_bag")
 ```
 
 ```
@@ -509,11 +480,13 @@ pullErrors(DL1202_proofed, error = "dove_bag")
 
 ### manualFix
 
-The automated `correct` function cannot always catch and fix every error. To finish the job, `manualFix` function replaces specified inaccurate values with the values you want. It is not recommended that this function only be used after correcting the data; it's best used on a case-by-case basis. In the instance of frame shifts, for example, it would be wise to use after `clean`. Or if problems are only identified after `proof`, you can run `manualFix` on the cleaned data and re-run `proof`. This function is highly flexible and recommended to be used as needed.
+The automated `correct` function cannot always catch and fix every error. To finish the job, `manualFix` function replaces specified inaccurate values with the values you want. It is not recommended that this function only be used after correcting the data; it's best used on a case-by-case basis. If problems are only identified after `proof`, you can run `manualFix` on the cleaned data and re-run `proof`. This function is highly flexible and recommended to be used as needed.
+
+In the below example, a "GS" value in the state field is corrected to "GA".
 
 
 ```r
-manualFix(DL1202_corrected, field = "state", error_value = "GS", correct_value = "GA")
+manualFix(DL1301_corrected, field = "state", error_value = "GS", correct_value = "GA")
 ```
 
 ### write_hip
@@ -522,7 +495,7 @@ After the data have been processed with `correct`, the table is ready to be writ
 
 
 ```r
-write_hip(DL1202_corrected, path = "C:/HIP/all_2019")
+write_hip(DL1301_corrected, path = "C:/HIP/all_2019")
 ```
 
 ### writeReport
@@ -535,11 +508,11 @@ The `writeReport` function can be used to automatically generate an R markdown d
 memory.limit(size = 55000)
 
 writeReport(
-  path = "C:/HIP/DL1202",
+  path = "C:/HIP/DL1301",
   type = "dl_report",
   yr = 2019,
   dir = "C:/HIP/dl_reports",
-  file = "DL1202_report")
+  file = "DL1301_report")
 ```
 
 ## Part C: Data Visualization and Tabulation
@@ -550,7 +523,7 @@ The `outOfStateHunters` function plots and tabulates how many hunters registered
 
 
 ```r
-outOfStateHunters(DL1202_proofed)
+outOfStateHunters(DL1301_proofed)
 ```
 
 <img src="figure/outofstate-1.png" title="Figure 6. Plot of proportions of out-of-state hunters." alt="Figure 6. Plot of proportions of out-of-state hunters." width="500" style="display: block; margin: auto;" />
@@ -561,7 +534,7 @@ The `youthHunters` function returns a table and plot of the number of hunters wi
 
 
 ```r
-youthHunters(DL1202_proofed, year = 2020)
+youthHunters(DL1301_proofed, year = 2021)
 ```
 
 <img src="figure/youth-1.png" title="Figure 7. Plot of proportions of youth hunters." alt="Figure 7. Plot of proportions of youth hunters." width="500" style="display: block; margin: auto;" />
@@ -572,7 +545,7 @@ The `errorPlot_fields` function can be run on all states...
 
 
 ```r
-errorPlot_fields(DL1202_proofed, loc = "all", year = 2020)
+errorPlot_fields(DL1301_proofed, loc = "all", year = 2021)
 ```
 
 <img src="figure/errorfieldsplotall-1.png" title="Figure 2. Plot of all location's errors by field name." alt="Figure 2. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
@@ -581,7 +554,7 @@ errorPlot_fields(DL1202_proofed, loc = "all", year = 2020)
 
 
 ```r
-errorPlot_fields(DL1202_proofed, loc = "LA", year = 2020)
+errorPlot_fields(DL1301_proofed, loc = "LA", year = 2021)
 ```
 
 <img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of all North Carolina's errors by field name." alt="Figure 3. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
@@ -590,7 +563,7 @@ The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the prop
 
 
 ```r
-errorPlot_fields(DL1202_proofed, year = 2020, youth = TRUE)
+errorPlot_fields(DL1301_proofed, year = 2021, youth = TRUE)
 ```
 
 <img src="figure/errorfieldsplotyouth-1.png" title="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
@@ -602,7 +575,7 @@ It is possible to add any `ggplot2` components to these plots. For season total 
 errorPlot_fields(
   hipdata2020 %>%
     filter(str_detect(dl_cycle, "0800|0901|0902|1001")),
-    year = 2020) +
+    year = 2021) +
   theme(
     axis.text.x = element_text(angle = 90, vjust = 0, hjust = 1),
     legend.position = "bottom") +
@@ -615,7 +588,7 @@ The `errorPlot_states` function plots error proportions per state. You may optio
 
 
 ```r
-errorPlot_states(DL1202_proofed)
+errorPlot_states(DL1301_proofed)
 ```
 
 <img src="figure/errorplotstates-1.png" title="Figure 5. Plot of proportion of error by state." alt="Figure 5. Plot of proportion of error by state." width="500" style="display: block; margin: auto;" />
@@ -637,136 +610,133 @@ The `errorTable` function is a flexible way to obtain error data as a tibble, wh
 
 
 ```r
-errorTable(DL1202_proofed)
+errorTable(DL1301_proofed)
 ```
 
 ```
-## # A tibble: 156 x 3
-##    dl_state error      error_count
-##    <chr>    <chr>            <dbl>
-##  1 AK       birth_date           2
-##  2 AL       birth_date         190
-##  3 AL       city                 1
-##  4 AL       firstname            7
-##  5 AL       lastname             1
-##  6 AL       suffix              10
-##  7 AL       zip                  7
-##  8 AR       birth_date         175
-##  9 AR       email                1
-## 10 AR       firstname           15
-## # ... with 146 more rows
+## # A tibble: 98 x 3
+##    dl_state error           error_count
+##    <chr>    <chr>                 <dbl>
+##  1 AK       issue_date                1
+##  2 AK       registration_yr           1
+##  3 AL       birth_date              157
+##  4 AL       email                     3
+##  5 AL       firstname                 5
+##  6 AL       suffix                    5
+##  7 AL       zip                      10
+##  8 CA       birth_date              212
+##  9 CA       dove_bag                 65
+## 10 CA       title                     2
+## # ... with 88 more rows
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
 
 
 ```r
-errorTable(DL1202_proofed, field = "none")
+errorTable(DL1301_proofed, field = "none")
 ```
 
 ```
-## # A tibble: 37 x 2
+## # A tibble: 28 x 2
 ##    dl_state error_count
 ##    <chr>          <dbl>
 ##  1 AK                 2
-##  2 AL               216
-##  3 AR               571
-##  4 CA               464
-##  5 CO               195
-##  6 CT               299
-##  7 FL                37
-##  8 GA                59
-##  9 IA              3218
-## 10 ID               158
-## # ... with 27 more rows
+##  2 AL               180
+##  3 CA               279
+##  4 CO               116
+##  5 CT               260
+##  6 FL               104
+##  7 GA               122
+##  8 IA              2988
+##  9 ID               222
+## 10 IN                71
+## # ... with 18 more rows
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
 
 
 ```r
-errorTable(DL1202_proofed, loc = "none")
+errorTable(DL1301_proofed, loc = "none")
 ```
 
 ```
-## # A tibble: 17 x 2
-##    error            error_count
-##    <chr>                  <dbl>
-##  1 birth_date              7533
-##  2 city                       3
-##  3 coots_snipe               68
-##  4 cranes                    49
-##  5 dove_bag                 473
-##  6 ducks_bag               3226
-##  7 email                   6516
-##  8 firstname                150
-##  9 geese_bag                 78
-## 10 hunt_mig_birds            19
-## 11 lastname                  13
-## 12 rails_gallinules          64
-## 13 registration_yr            2
-## 14 state                      2
-## 15 suffix                   393
-## 16 woodcock_bag              21
-## 17 zip                      525
+## # A tibble: 14 x 2
+##    error           error_count
+##    <chr>                 <dbl>
+##  1 birth_date             2348
+##  2 city                      1
+##  3 dove_bag                106
+##  4 ducks_bag              2937
+##  5 email                   277
+##  6 firstname                49
+##  7 hunt_mig_birds           11
+##  8 issue_date                1
+##  9 lastname                  5
+## 10 registration_yr           1
+## 11 state                     1
+## 12 suffix                   40
+## 13 title                     3
+## 14 zip                     132
 ```
 
 Location can be specified.
 
 
 ```r
-errorTable(DL1202_proofed, loc = "CA")
+errorTable(DL1301_proofed, loc = "CA")
 ```
 
 ```
 ## # A tibble: 3 x 3
 ##   dl_state error      error_count
 ##   <chr>    <chr>            <dbl>
-## 1 CA       birth_date         410
-## 2 CA       dove_bag            53
-## 3 CA       firstname            1
+## 1 CA       birth_date         212
+## 2 CA       dove_bag            65
+## 3 CA       title                2
 ```
 
 Field can be specified.
 
 
 ```r
-errorTable(DL1202_proofed, field = "suffix")
+errorTable(DL1301_proofed, field = "suffix")
 ```
 
 ```
 ## # A tibble: 1 x 2
 ##   error  error_count
 ##   <chr>        <dbl>
-## 1 suffix         393
+## 1 suffix          40
 ```
 
 Total errors for a location can be pulled.
 
 
 ```r
-errorTable(DL1202_proofed, loc = "CA", field = "none")
+errorTable(DL1301_proofed, loc = "CA", field = "none")
 ```
 
 ```
 ## # A tibble: 1 x 2
 ##   dl_state total_errors
 ##   <chr>           <dbl>
-## 1 CA                464
+## 1 CA                279
 ```
 
 Total errors for a field in a particular location can be pulled.
 
 
 ```r
-errorTable(DL1202_proofed, loc = "CA", field = "dove_bag")
+errorTable(DL1301_proofed, loc = "CA", field = "dove_bag")
 ```
 
 ```
 ## # A tibble: 1 x 3
 ##   dl_state error    error_count
 ##   <chr>    <chr>          <dbl>
-## 1 CA       dove_bag          53
+## 1 CA       dove_bag          65
 ```
 
 ### redFlags
@@ -776,16 +746,15 @@ States with an unacceptable level of error can be pulled into a tibble. The tibb
 
 
 ```r
-redFlags(DL1202_proofed, type = "state", threshold = 0.03)
+redFlags(DL1301_proofed, type = "state", threshold = 0.03)
 ```
 
 ```
-## # A tibble: 3 x 5
+## # A tibble: 2 x 5
 ##   dl_state count_errors count_correct proportion flag        
 ##   <chr>           <int>         <int>      <dbl> <chr>       
-## 1 WV                331          7369     0.0430 error > 0.03
-## 2 CT                299          6851     0.0418 error > 0.03
-## 3 IA               3218         77507     0.0399 error > 0.03
+## 1 CT                260          6015     0.0414 error > 0.03
+## 2 IA               2988         76387     0.0376 error > 0.03
 ```
 
 <b>By field.</b>
@@ -793,16 +762,15 @@ The same can be done for data fields. In this example, we see which fields had m
 
 
 ```r
-redFlags(DL1202_proofed, type = "field", threshold = 0.01)
+redFlags(DL1301_proofed, type = "field", threshold = 0.01)
 ```
 
 ```
-## # A tibble: 3 x 5
+## # A tibble: 2 x 5
 ##   errors     count_errors count_correct proportion flag        
 ##   <chr>             <int>         <int>      <dbl> <chr>       
-## 1 birth_date         7533        113653     0.0622 error > 0.01
-## 2 email              6516        114670     0.0538 error > 0.01
-## 3 ducks_bag          3226        117960     0.0266 error > 0.01
+## 1 ducks_bag          2937         45522     0.0606 error > 0.01
+## 2 birth_date         2348         46111     0.0485 error > 0.01
 ```
 
 ## Troubleshooting
@@ -827,7 +795,7 @@ Another version of a parsing failure occurs when a file is missing the last colu
 
 Some of these functions require a lot of memory to run. To help your R session process these data, especially when working with the large season totals, you can do a few things:
 
-1. Remove objects from the environment. If you have already run `read_hip`, `clean`, and `proof`, you may no longer need your original dataframe or your cleaned dataframe, since most error checking functions work from the proofed or corrected versions of the data. To remove an unneeded object like the cleaned dataframe, run `rm(DL1202_clean)`.
+1. Remove objects from the environment. If you have already run `read_hip`, `clean`, and `proof`, you may no longer need your original dataframe or your cleaned dataframe, since most error checking functions work from the proofed or corrected versions of the data. To remove an unneeded object like the cleaned dataframe, run `rm(DL1301_clean)`.
 
 2. Check your memory using `memory.limit()`
 
