--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -131,7 +131,7 @@ Below is a table summarizing the total of number of records per download state.
 ```{r sum_per_state, echo = FALSE, message = FALSE}
 
 DT::datatable(
-  fixed_data %>% 
+  proofed_data %>% 
     select(dl_state) %>% 
     group_by(dl_state) %>% 
     summarize(sum = n()) %>% 
@@ -148,7 +148,7 @@ rm(season_lines)
 ```{r reg_yr_check, echo = FALSE}
 DT::datatable(
   filter = "top", 
-  fixed_data %>% 
+  proofed_data %>% 
     select(registration_yr, dl_state) %>% 
     group_by(registration_yr, dl_state) %>% 
     summarize(n = n()) %>% 
@@ -160,7 +160,7 @@ DT::datatable(
 
 ```{r hunty_check, echo = FALSE}
 huntcheck <-
-  fixed_data %>% 
+  proofed_data %>% 
   select(hunt_mig_birds, dl_state) %>% 
   group_by(hunt_mig_birds, dl_state) %>% 
   summarize(n = n()) %>% 
@@ -321,15 +321,15 @@ findDuplicates(cleaned_data)
 
 ```{r a_fd, echo = FALSE, warning = FALSE, fig.align = "center"}
 rm(cleaned_data)
-findDuplicates(fixed_data)
+findDuplicates(proofed_data)
 
-DT::datatable(findDuplicates(fixed_data, return = "table"))
+DT::datatable(findDuplicates(proofed_data, return = "table"))
 ```
 
 ## Strata
 
 ```{r stratacheck, echo = FALSE}
-DT::datatable(strataCheck(fixed_data))
+DT::datatable(strataCheck(proofed_data))
 ```
 
 ## Repeated values
@@ -338,14 +338,14 @@ DT::datatable(strataCheck(fixed_data))
 
 ```{r h_validate, echo = FALSE}
 DT::datatable(
-  migbirdHIP::validate(fixed_data, type = "horizontal") %>% 
+  migbirdHIP::validate(proofed_data, type = "horizontal") %>% 
     mutate(prop_repeat = round(prop_repeat, digits = 2)))
 ```
 
 ### Repeated values within duck bag code
 
 ```{r v_validate, echo = FALSE}
-DT::datatable(migbirdHIP::validate(fixed_data, type = "vertical"))
+DT::datatable(migbirdHIP::validate(proofed_data, type = "vertical"))
 ```
 
 ## Zero values
@@ -357,7 +357,7 @@ All bag values are 0:
 ```{r zero_all, echo = FALSE, warning = FALSE}
 
 DT::datatable(
-  fixed_data %>%
+  proofed_data %>%
     # Subset the data
     select(
       dl_state,
@@ -370,7 +370,7 @@ DT::datatable(
     group_by(dl_state, source_file, n_rows) %>% 
     mutate_at(
       vars(
-        fixed_data %>% 
+        proofed_data %>% 
         select(matches("bag|coots|rails|cranes|pigeon|brant|seaducks")) %>% 
         names()), 
       ~suppressWarnings(as.integer(.))) %>% 
@@ -397,7 +397,7 @@ Duck bag values are 0:
 
 ```{r zero_ducks, echo = FALSE}
 DT::datatable(
-  fixed_data %>%
+  proofed_data %>%
   # Subset the data
   select(dl_state, dl_date, ducks_bag) %>%
   group_by(dl_state, dl_date) %>%
@@ -419,12 +419,6 @@ DT::datatable(
   arrange(desc(zero_ducks_prop)) %>% 
   relocate(zero_rows, .before = "dl_rows")
 )
-```
-
-```{r data_sweep, include = FALSE}
-
-# Remove data objects to improve memory use
-rm(fixed_data)
 ```
 
 # Error Visualizations
