--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -102,10 +102,22 @@ DL1301 <- read_hip("C:/HIP/DL1301")
 ## 2 C:/HIP/DL1301/MO20211229.txt ISO-8859-1       0.26
 ## 3 C:/HIP/DL1301/NE20211217.txt ISO-8859-1       0.32
 ## 4 C:/HIP/DL1301/NE20211217.txt ISO-8859-2       0.21
-## # A tibble: 1 x 3
-##   dl_state mean_prop     n
-##      <dbl>     <dbl> <int>
-## 1       NA     0.286    70
+## # A tibble: 13 x 3
+##    dl_state mean_prop     n
+##    <chr>        <dbl> <int>
+##  1 LA           1         1
+##  2 WV           0.75      1
+##  3 IN           0.667     3
+##  4 AL           0.25      1
+##  5 FL           0.25      5
+##  6 GA           0.25     11
+##  7 IA           0.25      4
+##  8 ID           0.25      1
+##  9 ME           0.25      1
+## 10 OK           0.25     25
+## 11 OR           0.25      1
+## 12 TN           0.25      9
+## 13 VA           0.25      7
 ```
 
 Did you get a warning or three? Read an explanation of common `read_hip` warnings, [below](#common-read_hip-warnings).
@@ -202,7 +214,7 @@ Other quick fixes include:
     * Deletes trailing -0000 and -____ from zip codes
 * Address cleaning
     * Deletes leading "." in addresses (a spillover character from suffix)
-    * Attempt at P.O. Box standardization, by changing "P.O.BOX" to "P.O. BOX" and "PO BOX" to "P.O. BOX"
+    * Attempt at PO Box standardization, by changing "P.O.BOX" to "PO BOX" and "P.O. BOX" to "PO BOX"
 * Trims whitespace on all values (again)
 
 ### findDuplicates
@@ -310,7 +322,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  4 WV20211229.txt 2         183     294       0.622
 ##  5 IN20211229.txt 1         406     690       0.588
 ##  6 MN20211229.txt 1         171     297       0.576
-##  7 WA20211229.txt 1         815    1460       0.558
+##  7 WA20211229.txt 1         816    1460       0.559
 ##  8 WA20211215.txt 1         937    1737       0.539
 ##  9 KY20211228.txt 1         528     984       0.537
 ## 10 NE20211217.txt 1         477     903       0.528
