season_report template: use a new param in writeReport to read in corrected HIP data for accurate comparison of error handling

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -10,6 +10,8 @@ output:
 params:
   comp_path:
     value: x
+  proc_path:
+    value: x
   year:
     value: x
 ---
@@ -110,8 +112,10 @@ proofed_data <- proof(fixed_data, year = params$year)
 
 rm(fixed_data)
 
-# Run the correct function
-corrected_data <- correct(proofed_data, year = params$year, data = "bag")
+# Read in pre-processed data
+corrected_data <-
+  map_df(1:length(list.files(proc_path)),
+      ~read_csv(list.files(proc_path, full.names = T)[.x]))
 
 # Summarize number of records from Canada
 canada_records <-
