--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -115,7 +115,19 @@ rm(fixed_data)
 # Read in pre-processed data
 corrected_data <-
   map_df(1:length(list.files(proc_path)),
-      ~read_csv(list.files(proc_path, full.names = T)[.x]))
+      ~read_csv(list.files(proc_path, full.names = T)[.x])) %>% 
+  rename(
+    zip = postal_code,
+    ducks_bag = Q_ducks,
+    geese_bag = Q_geese,
+    dove_bag = Q_doves,
+    woodcock_bag = Q_woodcock,
+    coots_snipe = Q_coot_snipe,
+    rails_gallinules = Q_rail_gallinule,
+    cranes = Q_cranes,
+    band_tailed_pigeon = Q_bt_pigeons,
+    brant = Q_brant,
+    seaducks = Q_seaducks)
 
 # Summarize number of records from Canada
 canada_records <-
@@ -135,7 +147,7 @@ Below is a table summarizing the total of number of records per download state.
 ```{r sum_per_state, echo = FALSE, message = FALSE}
 
 DT::datatable(
-  proofed_data %>% 
+  corrected_data %>% 
     select(dl_state) %>% 
     group_by(dl_state) %>% 
     summarize(sum = n()) %>% 
@@ -152,7 +164,7 @@ rm(season_lines)
 ```{r reg_yr_check, echo = FALSE}
 DT::datatable(
   filter = "top", 
-  proofed_data %>% 
+  corrected_data %>% 
     select(registration_yr, dl_state) %>% 
     group_by(registration_yr, dl_state) %>% 
     summarize(n = n()) %>% 
@@ -164,7 +176,7 @@ DT::datatable(
 
 ```{r hunty_check, echo = FALSE}
 huntcheck <-
-  proofed_data %>% 
+  corrected_data %>% 
   select(hunt_mig_birds, dl_state) %>% 
   group_by(hunt_mig_birds, dl_state) %>% 
   summarize(n = n()) %>% 
@@ -296,15 +308,15 @@ findDuplicates(cleaned_data)
 
 ```{r a_fd, echo = FALSE, warning = FALSE, fig.align = "center"}
 rm(cleaned_data)
-findDuplicates(proofed_data)
+findDuplicates(corrected_data)
 
-DT::datatable(findDuplicates(proofed_data, return = "table"))
+DT::datatable(findDuplicates(corrected_data, return = "table"))
 ```
 
 ## Strata
 
 ```{r stratacheck, echo = FALSE}
-DT::datatable(strataCheck(proofed_data))
+DT::datatable(strataCheck(corrected_data))
 ```
 
 ## Repeated values
@@ -313,14 +325,14 @@ DT::datatable(strataCheck(proofed_data))
 
 ```{r h_validate, echo = FALSE}
 DT::datatable(
-  migbirdHIP::validate(proofed_data, type = "horizontal") %>% 
+  migbirdHIP::validate(corrected_data, type = "horizontal") %>% 
     mutate(prop_repeat = round(prop_repeat, digits = 2)))
 ```
 
 ### Repeated values within duck bag code
 
 ```{r v_validate, echo = FALSE}
-DT::datatable(migbirdHIP::validate(proofed_data, type = "vertical"))
+DT::datatable(migbirdHIP::validate(corrected_data, type = "vertical"))
 ```
 
 ## Zero values
@@ -332,7 +344,7 @@ All bag values are 0:
 ```{r zero_all, echo = FALSE, warning = FALSE}
 
 DT::datatable(
-  proofed_data %>%
+  corrected_data %>%
     # Subset the data
     select(
       dl_state,
@@ -345,7 +357,7 @@ DT::datatable(
     group_by(dl_state, source_file, n_rows) %>% 
     mutate_at(
       vars(
-        proofed_data %>% 
+        corrected_data %>% 
         select(matches("bag|coots|rails|cranes|pigeon|brant|seaducks")) %>% 
         names()), 
       ~suppressWarnings(as.integer(.))) %>% 
@@ -372,7 +384,7 @@ Duck bag values are 0:
 
 ```{r zero_ducks, echo = FALSE}
 DT::datatable(
-  proofed_data %>%
+  corrected_data %>%
   # Subset the data
   select(dl_state, dl_date, ducks_bag) %>%
   group_by(dl_state, dl_date) %>%
