season_report template: specified reading in corrected_data cols as character to avoid processing error in strataCheck chunk

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -115,7 +115,8 @@ rm(fixed_data)
 # Read in pre-processed data
 corrected_data <-
   map_df(1:length(list.files(params$proc_path)),
-      ~read_csv(list.files(params$proc_path, full.names = T)[.x]) %>% 
+      ~read_csv(list.files(params$proc_path, full.names = T)[.x],
+                col_types = paste(rep("c", 28), collapse = "")) %>% 
         mutate(dl_cycle = str_extract(list.files(path)[.x], "(?<=DL)[0-9]{4}"))) %>% 
   rename(
     zip = postal_code,
